Fixed overflow-x not hiding  when using smaller devices

--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,23 @@
 /* resets */
 * {
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
+  vertical-align: baseline;
+	font-weight: inherit;
+	font-family: inherit;
+	font-style: inherit;
+	font-size: 100%;
+	border: 0 none;
+	outline: 0;
+	padding: 0;
+	margin: 0;
 }
-html {
-  overflow-x: hidden;
-}
+
 html,
 body {
+  overflow-x: hidden;
   background-color: rgb(255, 254, 248);
   background-image: url("../images/crossword.png");
-  height: 100%;
+  width: 100%;
   
 }
 
@@ -126,7 +134,8 @@ p{
 /* Navigation */
 
 header {
-  margin-bottom: 80px;
+  margin-bottom: 75px;
+
 }
 
 nav {
@@ -148,6 +157,7 @@ nav {
   transition: all 0.5s ease-in-out ;
 }
 
+
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(227,27,109, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='15' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
   transition: all 0.5s ease-in-out ;
@@ -159,6 +169,15 @@ nav {
 
 .navbar-toggler-icon:hover{
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='15' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.navbar-toggler:focus {
+  border-color: #E31B6D;
+  outline: 0;
+}
+
+.navbar-toggler-icon:focus {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(227,27,109, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='15' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
  nav .nav-item {
@@ -194,8 +213,9 @@ nav {
   background-image: linear-gradient(to bottom, #1b242f, #182632, #132834, #0d2b36, #052d37);
   background-image: url("../images/leaf_overlay.png"), linear-gradient(to bottom,  #1b242f, #182632, #132834, #0d2b36, #052d37);
   color: white;
-  margin-bottom: 0px;
-  height: 95vh;
+  margin: 0px;
+  width: 100vw;
+  height: 100vh;
 }
 
 .jumbotron-img {
